2023-02-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_GHOSTSCRIPT_VERSION_CHECK,
	GROFF_URW_FONTS_NOTICE): Add macro dependency on
	`GROFF_GHOSTSCRIPT_PATH`, which should have been there already.
	(GROFF_GROHTML_PROGRAM_NOTICE): Add macro dependency on
	`GROFF_CHECK_GROHTML_PROGRAMS`, which should have been there
	already.

	(GROFF_CHECK_GROHTML_PROGRAMS, GROFF_PNMTOOLS_CAN_BE_QUIET):
	Move `AC_REQUIRE` expansions to precede shell variable
	assignments (after checking that the required macros don't
	clobber the assignments we're making).

2023-02-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/tests/basic-fonts-present.sh: Revise test again,
	per feedback from Deri James.  Even without Ghostscript or URW
	fonts available, gropdf can generate valid PDF documents; it
	simply can't embed fonts in general (without further
	arrangements made on the host system), which means it is
	restricted to the PDF base 14 fonts.  That's enough for many
	purposes, including generating our compiled man pages document
	{with minor degradations to the typeface lists in gropdf(1) and
	grops(1)}.  Drop the 'gs' command check, which also didn't check
	for the name of the Ghostscript interpreter determined by the
	"configure" script.  Replace dynamically generated font list
	with a static one (the base 14 fonts plus groff's EURO).

2023-02-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/tests/basic-fonts-present.sh: Revise test.
	Improve explanation of why we're looking for the gs(1) command
	in a font availability test.  Prefix diagnostic output with name
	of test script.  Perform a search for the 'ps' device font
	descriptions that will work in more build scenarios (i.e., don't
	assume an out-of-tree build taking place in an immediate
	subdirectory of the source).  Distinguish failure to find the
	font descriptions from a failure to locate the 'gs' command,